--- a/bootstrap/eks/config/manager/manager_args_patch.yaml
+++ b/bootstrap/eks/config/manager/manager_args_patch.yaml
@@ -11,6 +11,6 @@ spec:
       containers:
       - name: manager
         args:
-        - "--metrics-addr=127.0.0.1:8080"
-        - "--enable-leader-election"
+        - "--metrics-bind-addr=127.0.0.1:8080"
+        - "--leader-elect"
         - "--feature-gates=MachinePool=${EXP_MACHINE_POOL:=false}"
