--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_awsmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_awsmachines.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.9
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: awsmachines.infrastructure.cluster.x-k8s.io
 spec:
@@ -18,7 +18,28 @@ spec:
     singular: awsmachine
   scope: Namespaced
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - description: Cluster to which this AWSMachine belongs
+      jsonPath: .metadata.labels.cluster\.x-k8s\.io/cluster-name
+      name: Cluster
+      type: string
+    - description: EC2 instance state
+      jsonPath: .status.instanceState
+      name: State
+      type: string
+    - description: Machine ready status
+      jsonPath: .status.ready
+      name: Ready
+      type: string
+    - description: EC2 instance ID
+      jsonPath: .spec.providerID
+      name: InstanceID
+      type: string
+    - description: Machine object which owns with this AWSMachine
+      jsonPath: .metadata.ownerReferences[?(@.kind=="Machine")].name
+      name: Machine
+      type: string
+    name: v1alpha3
     schema:
       openAPIV3Schema:
         description: AWSMachine is the Schema for the awsmachines API
@@ -42,7 +63,10 @@ spec:
                 description: AdditionalSecurityGroups is an array of references to
                   security groups that should be applied to the instance. These security
                   groups would be set in addition to any security groups defined at
-                  the cluster level or in the actuator.
+                  the cluster level or in the actuator. It is possible to specify
+                  either IDs of Filters. Using Filters will cause additional requests
+                  to AWS API and if tags change the attached security groups might
+                  change too.
                 items:
                   description: AWSResourceReference is a reference to a specific AWS
                     resource by ID, ARN, or filters. Only one of ID, ARN or Filters
@@ -118,18 +142,14 @@ spec:
                     description: ID of resource
                     type: string
                 type: object
-              availabilityZone:
-                description: AvailabilityZone is references the AWS availability zone
-                  to use for this instance. If multiple subnets are matched for the
-                  availability zone, the first one return is picked.
-                type: string
               cloudInit:
                 description: CloudInit defines options related to the bootstrapping
                   systems where CloudInit is used.
                 properties:
-                  enableSecureSecretsManager:
-                    description: enableSecureSecretsManager, when set to true will
-                      use AWS Secrets Manager to ensure userdata privacy. A cloud-init
+                  insecureSkipSecretsManager:
+                    description: InsecureSkipSecretsManager, when set to true will
+                      not use AWS Secrets Manager or AWS Systems Manager Parameter
+                      Store to ensure privacy of userdata. By default, a cloud-init
                       boothook shell script is prepended to download the userdata
                       from Secrets Manager and additionally delete the secret.
                     type: boolean
@@ -143,14 +163,50 @@ spec:
                       is stored temporarily, and deleted when the machine registers
                       as a node against the workload cluster.
                     type: string
+                  secureSecretsBackend:
+                    description: SecureSecretsBackend, when set to parameter-store
+                      will utilize the AWS Systems Manager Parameter Storage to distribute
+                      secrets. By default or with the value of secrets-manager, will
+                      use AWS Secrets Manager instead.
+                    enum:
+                    - secrets-manager
+                    - ssm-parameter-store
+                    type: string
                 type: object
+              failureDomain:
+                description: FailureDomain is the failure domain unique identifier
+                  this Machine should be attached to, as defined in Cluster API. For
+                  this infrastructure provider, the ID is equivalent to an AWS Availability
+                  Zone. If multiple subnets are matched for the availability zone,
+                  the first one returned is picked.
+                type: string
               iamInstanceProfile:
                 description: IAMInstanceProfile is a name of an IAM instance profile
                   to assign to the instance
                 type: string
+              imageLookupBaseOS:
+                description: ImageLookupBaseOS is the name of the base operating system
+                  to use for image lookup the AMI is not set.
+                type: string
+              imageLookupFormat:
+                description: 'ImageLookupFormat is the AMI naming format to look up
+                  the image for this machine It will be ignored if an explicit AMI
+                  is set. Supports substitutions for {{.BaseOS}} and {{.K8sVersion}}
+                  with the base OS and kubernetes version, respectively. The BaseOS
+                  will be the value in ImageLookupBaseOS or ubuntu (the default),
+                  and the kubernetes version as defined by the packages produced by
+                  kubernetes/release without v as a prefix: 1.13.0, 1.12.5-mybuild.1,
+                  or 1.17.3. For example, the default image format of capa-ami-{{.BaseOS}}-?{{.K8sVersion}}-*
+                  will end up searching for AMIs that match the pattern capa-ami-ubuntu-?1.18.0-*
+                  for a Machine that is targeting kubernetes v1.18.0 and the ubuntu
+                  base OS. See also: https://golang.org/pkg/text/template/'
+                type: string
               imageLookupOrg:
                 description: ImageLookupOrg is the AWS Organization ID to use for
                   image lookup if AMI is not set.
+                type: string
+              instanceID:
+                description: InstanceID is the EC2 instance ID for this machine.
                 type: string
               instanceType:
                 description: 'InstanceType is the type of instance to create. Example:
@@ -163,6 +219,45 @@ spec:
                   type: string
                 maxItems: 2
                 type: array
+              nonRootVolumes:
+                description: Configuration options for the non root storage volumes.
+                items:
+                  description: Volume encapsulates the configuration options for the
+                    storage device
+                  properties:
+                    deviceName:
+                      description: Device name
+                      type: string
+                    encrypted:
+                      description: Encrypted is whether the volume should be encrypted
+                        or not.
+                      type: boolean
+                    encryptionKey:
+                      description: EncryptionKey is the KMS key to use to encrypt
+                        the volume. Can be either a KMS key ID or ARN. If Encrypted
+                        is set and this is omitted, the default AWS key will be used.
+                        The key must already exist and be accessible by the controller.
+                      type: string
+                    iops:
+                      description: IOPS is the number of IOPS requested for the disk.
+                        Not applicable to all types.
+                      format: int64
+                      type: integer
+                    size:
+                      description: Size specifies size (in Gi) of the storage device.
+                        Must be greater than the image snapshot size or 8 (whichever
+                        is greater).
+                      format: int64
+                      minimum: 8
+                      type: integer
+                    type:
+                      description: Type is the type of the volume (e.g. gp2, io1,
+                        etc...).
+                      type: string
+                  required:
+                  - size
+                  type: object
+                type: array
               providerID:
                 description: ProviderID is the unique identifier as specified by the
                   cloud provider.
@@ -172,13 +267,54 @@ spec:
                   public IP. Precedence for this setting is as follows: 1. This field
                   if set 2. Cluster/flavor setting 3. Subnet default'
                 type: boolean
-              rootDeviceSize:
-                description: RootDeviceSize is the size of the root volume in gigabytes(GB).
-                format: int64
-                type: integer
+              rootVolume:
+                description: RootVolume encapsulates the configuration options for
+                  the root volume
+                properties:
+                  deviceName:
+                    description: Device name
+                    type: string
+                  encrypted:
+                    description: Encrypted is whether the volume should be encrypted
+                      or not.
+                    type: boolean
+                  encryptionKey:
+                    description: EncryptionKey is the KMS key to use to encrypt the
+                      volume. Can be either a KMS key ID or ARN. If Encrypted is set
+                      and this is omitted, the default AWS key will be used. The key
+                      must already exist and be accessible by the controller.
+                    type: string
+                  iops:
+                    description: IOPS is the number of IOPS requested for the disk.
+                      Not applicable to all types.
+                    format: int64
+                    type: integer
+                  size:
+                    description: Size specifies size (in Gi) of the storage device.
+                      Must be greater than the image snapshot size or 8 (whichever
+                      is greater).
+                    format: int64
+                    minimum: 8
+                    type: integer
+                  type:
+                    description: Type is the type of the volume (e.g. gp2, io1, etc...).
+                    type: string
+                required:
+                - size
+                type: object
+              spotMarketOptions:
+                description: SpotMarketOptions allows users to configure instances
+                  to be run using AWS Spot instances.
+                properties:
+                  maxPrice:
+                    description: MaxPrice defines the maximum price the user is willing
+                      to pay for Spot VM instances
+                    type: string
+                type: object
               sshKeyName:
                 description: SSHKeyName is the name of the ssh key to attach to the
-                  instance.
+                  instance. Valid values are empty string (do not use SSH keys), a
+                  valid SSH key name, or omitted (use the default SSH key name)
                 type: string
               subnet:
                 description: Subnet is a reference to the subnet to use for this instance.
@@ -212,6 +348,20 @@ spec:
                     description: ID of resource
                     type: string
                 type: object
+              tenancy:
+                description: Tenancy indicates if instance should run on shared or
+                  single-tenant hardware.
+                enum:
+                - default
+                - dedicated
+                - host
+                type: string
+              uncompressedUserData:
+                description: UncompressedUserData specify whether the user data is
+                  gzip-compressed before it is sent to ec2 instance. cloud-init has
+                  built-in support for gzip-compressed user data user data stored
+                  in aws secret manager is always gzip-compressed.
+                type: boolean
             type: object
           status:
             description: AWSMachineStatus defines the observed state of AWSMachine
@@ -234,8 +384,52 @@ spec:
                   - type
                   type: object
                 type: array
-              errorMessage:
-                description: "ErrorMessage will be set in the event that there is
+              conditions:
+                description: Conditions defines current service state of the AWSMachine.
+                items:
+                  description: Condition defines an observation of a Cluster API resource
+                    operational state.
+                  properties:
+                    lastTransitionTime:
+                      description: Last time the condition transitioned from one status
+                        to another. This should be when the underlying condition changed.
+                        If that is not known, then using the time when the API field
+                        changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: A human readable message indicating details about
+                        the transition. This field may be empty.
+                      type: string
+                    reason:
+                      description: The reason for the condition's last transition
+                        in CamelCase. The specific API may choose whether or not this
+                        field is considered a guaranteed API. This field may not be
+                        empty.
+                      type: string
+                    severity:
+                      description: Severity provides an explicit classification of
+                        Reason code, so the users or machines can immediately understand
+                        the current situation and act accordingly. The Severity field
+                        MUST be set only when Status=False.
+                      type: string
+                    status:
+                      description: Status of the condition, one of True, False, Unknown.
+                      type: string
+                    type:
+                      description: Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        Many .condition.type values are consistent across resources
+                        like Available, but because arbitrary conditions can be useful
+                        (see .node.status.conditions), the ability to deconflict is
+                        important.
+                      type: string
+                  required:
+                  - status
+                  - type
+                  type: object
+                type: array
+              failureMessage:
+                description: "FailureMessage will be set in the event that there is
                   a terminal problem reconciling the Machine and will contain a more
                   verbose string suitable for logging and human consumption. \n This
                   field should not be set for transitive errors that a controller
@@ -249,9 +443,9 @@ spec:
                   occur during the reconciliation of Machines can be added as events
                   to the Machine object and/or logged in the controller's output."
                 type: string
-              errorReason:
-                description: "ErrorReason will be set in the event that there is a
-                  terminal problem reconciling the Machine and will contain a succinct
+              failureReason:
+                description: "FailureReason will be set in the event that there is
+                  a terminal problem reconciling the Machine and will contain a succinct
                   value suitable for machine interpretation. \n This field should
                   not be set for transitive errors that a controller faces that are
                   expected to be fixed automatically over time (like service outages),
@@ -268,6 +462,13 @@ spec:
                 description: InstanceState is the state of the AWS instance for this
                   machine.
                 type: string
+              interruptible:
+                description: Interruptible reports that this machine is using spot
+                  instances and can therefore be interrupted by CAPI when it receives
+                  a notice that the spot instance is to be terminated by AWS. This
+                  will be set to true when SpotMarketOptions is not nil (i.e. this
+                  machine is using a spot instance).
+                type: boolean
               ready:
                 description: Ready is true when the provider resource is ready.
                 type: boolean
@@ -298,7 +499,7 @@ spec:
       jsonPath: .metadata.ownerReferences[?(@.kind=="Machine")].name
       name: Machine
       type: string
-    name: v1alpha3
+    name: v1alpha4
     schema:
       openAPIV3Schema:
         description: AWSMachine is the Schema for the awsmachines API
