--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,4 +1,8 @@
+namePrefix: capa-
 namespace: capa-system
+
+commonLabels:
+  cluster.x-k8s.io/provider: "infrastructure-aws"
 
 resources:
 - namespace.yaml
@@ -7,8 +11,46 @@ resources:
 bases:
 - ../rbac
 - ../manager
+- ../crd
+- ../certmanager
+- ../webhook
 
 patchesStrategicMerge:
 - manager_credentials_patch.yaml
 - manager_service_account_patch.yaml
 - manager_iam_patch.yaml
+- manager_auth_proxy_patch.yaml
+- manager_pull_policy.yaml
+- manager_webhook_patch.yaml
+- webhookcainjection_patch.yaml
+- manager_image_patch.yaml
+
+configurations:
+  - kustomizeconfig.yaml
+vars:
+  - name: CERTIFICATE_NAMESPACE # namespace of the certificate CR
+    objref:
+      kind: Certificate
+      group: cert-manager.io
+      version: v1
+      name: serving-cert # this name should match the one in certificate.yaml
+    fieldref:
+      fieldpath: metadata.namespace
+  - name: CERTIFICATE_NAME
+    objref:
+      kind: Certificate
+      group: cert-manager.io
+      version: v1
+      name: serving-cert # this name should match the one in certificate.yaml
+  - name: SERVICE_NAMESPACE # namespace of the service
+    objref:
+      kind: Service
+      version: v1
+      name: webhook-service
+    fieldref:
+      fieldpath: metadata.namespace
+  - name: SERVICE_NAME
+    objref:
+      kind: Service
+      version: v1
+      name: webhook-service
