--- a/controlplane/eks/config/default/manager_auth_proxy_patch.yaml
+++ b/controlplane/eks/config/default/manager_auth_proxy_patch.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
       - name: kube-rbac-proxy
-        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.4.1
+        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
         args:
         - "--secure-listen-address=0.0.0.0:8443"
         - "--upstream=http://127.0.0.1:8080/"
@@ -18,4 +18,4 @@ spec:
         - "--v=10"
         ports:
         - containerPort: 8443
-          name: https
+          name: http
