--- a/controlplane/eks/config/manager/manager.yaml
+++ b/controlplane/eks/config/manager/manager.yaml
@@ -19,7 +19,8 @@ spec:
       - command:
         - /manager
         args:
-        - --enable-leader-election
+        - --leader-elect
+        - "--metrics-bind-addr=127.0.0.1:8080"
         image: controller:latest
         name: manager
       terminationGracePeriodSeconds: 10
