--- a/controlplane/eks/config/manager/manager_args_patch.yaml
+++ b/controlplane/eks/config/manager/manager_args_patch.yaml
@@ -11,7 +11,7 @@ spec:
       containers:
       - name: manager
         args:
-        - "--metrics-addr=127.0.0.1:8080"
-        - "--enable-leader-election"
+        - "--metrics-bind-addr=127.0.0.1:8080"
+        - "--leader-elect"
         - "--feature-gates=EKSEnableIAM=${EXP_EKS_IAM:=false},EKSAllowAddRoles=${EXP_EKS_ADD_ROLES:=false},MachinePool=${EXP_MACHINE_POOL:=false}"
         - "--v=${EKS_CP_LOGLEVEL:=4}"
