--- a/controlplane/eks/config/rbac/role.yaml
+++ b/controlplane/eks/config/rbac/role.yaml
@@ -69,6 +69,13 @@ rules:
   - infrastructure.cluster.x-k8s.io
   resources:
   - awsclustercontrolleridentities
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
   - awsclusterroleidentities
   - awsclusterstaticidentities
   verbs:
