--- a/test/e2e/data/e2e_eks_conf.yaml
+++ b/test/e2e/data/e2e_eks_conf.yaml
@@ -35,10 +35,12 @@ providers:
   - name: cluster-api
     type: CoreProvider
     versions:
-      - name: v0.3.14
+      - name: v0.4.0
         # Use manifest from source files
-        value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.3.14/core-components.yaml"
+        value: "https://storage.googleapis.com/artifacts.k8s-staging-cluster-api.appspot.com/components/nightly_master_20210419/core-components.yaml"
         type: "url"
+        files:
+          - sourcePath: "./shared/v1alpha4/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -53,6 +55,8 @@ providers:
       - name: v0.6.0
         # Use manifest from source files
         value: ../../../controlplane/eks/config/default
+        files:
+          - sourcePath: "./shared/v1alpha4_provider/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -69,6 +73,8 @@ providers:
       - name: v0.6.0
         # Use manifest from source files
         value: ../../../bootstrap/eks/config/default
+        files:
+          - sourcePath: "./shared/v1alpha4_provider/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -82,9 +88,11 @@ providers:
   - name: aws
     type: InfrastructureProvider
     versions:
-      - name: v0.5.0
+      - name: v0.6.0
         # Use manifest from source files
         value: ../../../config/default
+        files:
+          - sourcePath: "./shared/v1alpha4_provider/metadata.yaml"
         replacements:
           - old: "imagePullPolicy: Always"
             new: "imagePullPolicy: IfNotPresent"
@@ -97,6 +105,8 @@ providers:
           - old: gcr.io/k8s-staging-cluster-api-aws/cluster-api-aws-controller:latest
             new: gcr.io/k8s-staging-cluster-api/capa-manager:e2e
     files:
+      - sourcePath: "./shared/v1alpha4/metadata.yaml"
+        targetName: "metadata.yaml"
       - sourcePath: "./eks/cluster-template-eks-control-plane-only.yaml"
         targetName: "cluster-template-eks-control-plane-only.yaml"
       - sourcePath: "./eks/cluster-template-eks-control-plane-only-withaddon.yaml"
@@ -110,7 +120,7 @@ providers:
         
 
 variables:
-  KUBERNETES_VERSION: "v1.18.0"
+  KUBERNETES_VERSION: "v1.19.8"
   CNI: "../../data/cni/calico_eks.yaml"
   EXP_MACHINE_POOL: "true"
   EXP_CLUSTER_RESOURCE_SET: "true"
@@ -120,6 +130,7 @@ variables:
   EXP_EKS_IAM: "false"
   EXP_EKS_ADD_ROLES: "false"
   VPC_ADDON_VERSION: "v1.6.3-eksbuild.1"
+  CONFORMANCE_CI_ARTIFACTS_KUBERNETES_VERSION: "v1.19.8"
 
 intervals:
   default/wait-cluster: ["30m", "10s"]
