Update template for capi remediation e2e tests

--- a/test/e2e/data/e2e_conf.yaml
+++ b/test/e2e/data/e2e_conf.yaml
@@ -115,8 +115,10 @@ providers:
         targetName: "cluster-template-limit-az.yaml"
       - sourcePath: "./infrastructure-aws/cluster-template-spot-instances.yaml"
         targetName: "cluster-template-spot-instances.yaml"
-      - sourcePath: "./infrastructure-aws/cluster-template-mhc.yaml"
-        targetName: "cluster-template-mhc.yaml"
+      - sourcePath: "./infrastructure-aws/cluster-template-md-remediation.yaml"
+        targetName: "cluster-template-md-remediation.yaml"
+      - sourcePath: "./infrastructure-aws/cluster-template-kcp-remediation.yaml"
+        targetName: "cluster-template-kcp-remediation.yaml"
       - sourcePath: "./infrastructure-aws/cluster-template-machine-pool.yaml"
         targetName: "cluster-template-machine-pool.yaml"
       - sourcePath: "./infrastructure-aws/cluster-template-upgrade-to-main.yaml"
