Update CAPI version to nightly 20210524 Change MachinePool group from exp.cluster.x-k8s.io to cluster.x-k8s.io Change KubeadmControlplane InfrastructureTemplate to MachineTemplate
d

--- a/bootstrap/eks/config/rbac/role.yaml
+++ b/bootstrap/eks/config/rbac/role.yaml
@@ -48,17 +48,17 @@ rules:
   - list
   - watch
 - apiGroups:
-  - controlplane.cluster.x-k8s.io
+  - cluster.x-k8s.io
   resources:
-  - awsmanagedcontrolplanes
+  - machinepools
   verbs:
   - get
   - list
   - watch
 - apiGroups:
-  - exp.cluster.x-k8s.io
+  - controlplane.cluster.x-k8s.io
   resources:
-  - machinepools
+  - awsmanagedcontrolplanes
   verbs:
   - get
   - list
