--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -49,6 +49,15 @@ rules:
 - apiGroups:
   - cluster.x-k8s.io
   resources:
+  - machinepools
+  - machinepools/status
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
   - machines
   - machines/status
   verbs:
@@ -73,15 +82,6 @@ rules:
   - get
   - list
   - patch
-  - watch
-- apiGroups:
-  - exp.cluster.x-k8s.io
-  resources:
-  - machinepools
-  - machinepools/status
-  verbs:
-  - get
-  - list
   - watch
 - apiGroups:
   - infrastructure.cluster.x-k8s.io
