--- a/test/e2e/data/eks/cluster-template-eks-managed-machinepool-only.yaml
+++ b/test/e2e/data/eks/cluster-template-eks-managed-machinepool-only.yaml
@@ -1,4 +1,4 @@
-apiVersion: exp.cluster.x-k8s.io/v1alpha4
+apiVersion: cluster.x-k8s.io/v1alpha4
 kind: MachinePool
 metadata:
   name: "${CLUSTER_NAME}-pool-0"
