--- a/test/e2e/data/eks/cluster-template-eks-managedmachinepool.yaml
+++ b/test/e2e/data/eks/cluster-template-eks-managedmachinepool.yaml
@@ -25,7 +25,7 @@ spec:
   sshKeyName: "${AWS_SSH_KEY_NAME}"
   version: "${KUBERNETES_VERSION}"
 ---
-apiVersion: exp.cluster.x-k8s.io/v1alpha4
+apiVersion: cluster.x-k8s.io/v1alpha4
 kind: MachinePool
 metadata:
   name: "${CLUSTER_NAME}-pool-0"
