--- a/test/e2e/data/infrastructure-aws/cluster-template-limit-az.yaml
+++ b/test/e2e/data/infrastructure-aws/cluster-template-limit-az.yaml
@@ -36,10 +36,11 @@ metadata:
   name: "${CLUSTER_NAME}-control-plane"
 spec:
   replicas: ${CONTROL_PLANE_MACHINE_COUNT}
-  infrastructureTemplate:
-    kind: AWSMachineTemplate
-    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
-    name: "${CLUSTER_NAME}-control-plane"
+  machineTemplate:
+    infrastructureRef:
+      kind: AWSMachineTemplate
+      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+      name: "${CLUSTER_NAME}-control-plane-1"
   kubeadmConfigSpec:
     initConfiguration:
       nodeRegistration:
