External CCM e2e test with CSI
Co-authored-by: Sedef Savas <ssavas@ucdavis.edu>

--- a/test/e2e/data/e2e_conf.yaml
+++ b/test/e2e/data/e2e_conf.yaml
@@ -131,6 +131,8 @@ providers:
         targetName: "cluster-template-simple-multitenancy.yaml"
       - sourcePath: "./infrastructure-aws/cluster-template-nested-multitenancy.yaml"
         targetName: "cluster-template-nested-multitenancy.yaml"
+      - sourcePath: "./infrastructure-aws/cluster-template-external-cloud-provider.yaml"
+        targetName: "cluster-template-external-cloud-provider.yaml"
 
 variables:
   CNI: "../../data/cni/calico.yaml"
