--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_awsmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_awsmachinetemplates.yaml
@@ -547,6 +547,7 @@ spec:
                       instanceType:
                         description: 'InstanceType is the type of instance to create.
                           Example: m4.xlarge'
+                        minLength: 2
                         type: string
                       networkInterfaces:
                         description: NetworkInterfaces is a list of ENIs to associate
@@ -717,6 +718,8 @@ spec:
                           cloud-init has built-in support for gzip-compressed user
                           data user data stored in aws secret manager is always gzip-compressed.
                         type: boolean
+                    required:
+                    - instanceType
                     type: object
                 required:
                 - spec
